feat: 迁移代码完成

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vue-storefront/__replace_me__-theme",
+  "name": "@vue-storefront/xbuy-theme",
   "version": "0.0.1",
   "private": true,
   "engines": {
@@ -22,15 +22,18 @@
     "update:update": "ncu -u"
   },
   "dependencies": {
+    "@pinia/nuxt": "0.1.9",
     "@storefront-ui/vue": "0.11.4",
-    "@vue-storefront/__replace_me__": "0.0.1",
     "@vue-storefront/middleware": "~2.5.4",
     "@vue-storefront/nuxt": "~2.5.4",
     "@vue-storefront/nuxt-theme": "~2.5.4",
+    "@vue-storefront/xbuy": "0.0.1",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.19.0",
     "nuxt": "^2.15.8",
     "nuxt-i18n": "^6.5.0",
+    "pinia": "2.0.14",
+    "pinia-plugin-persist": "^1.0.0",
     "vee-validate": "^3.4.13",
     "vue-scrollto": "^2.20.0"
   },
